--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,10 +1,11 @@
 <header>
     <div id="left-header">
         {% if current_user.is_authenticated %}
-            <button id="notifications-btn">Уведомления</button>
+            <nav id="app-menu">
+                <a href="/notifications">Уведомления</a>
+            </nav>
         {% endif %}
     </div>
-
     <div id="right-header">
         {% if current_user.is_authenticated %}
             {% if current_user.roles[0].name == 'user' %}
