--- a/templates/layouts/management/requisition.html
+++ b/templates/layouts/management/requisition.html
@@ -7,6 +7,5 @@
 
 
 {% block sidebar_tabs %}
-    <li><a href="/cook/requisitions">Список</a></li>
-    <li><a href="/cook/requisition/add">Добавить</a></li>
+    <li><a href="/notifications">К уведомлениям</a></li>
 {% endblock %}
