--- a/templates/dishes/dish.html
+++ b/templates/dishes/dish.html
@@ -30,7 +30,7 @@
                 {% endfor %}
             </ul>
         </section>
-
+    {% if role == 'user' %}
         <section class="info__section">
             <form action="/reviews/add" id="newReviewForm" method="post" style="display: none;"></form>
             <div class="section__top">
@@ -50,5 +50,6 @@
                 </div>
             {% endif %}
         </section>
+    {% endif %}
     </div>
 {% endblock %}
