--- a/templates/menus/menu.html
+++ b/templates/menus/menu.html
@@ -28,8 +28,8 @@
                     <option value="breakfast" selected>Завтрак</option>
                     <option value="lunch">Обед</option>
                 {% elif menu.type == "lunch" %}
-                    <option value="breakfast">Обед</option>
-                    <option value="lunch" selected>Завтрак</option>
+                    <option value="breakfast">Завтрак</option>
+                    <option value="lunch" selected>Обед</option>
                 {% else %}
                     <option value="breakfast">Завтрак</option>
                     <option value="lunch">Обед</option>
