--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -31,9 +31,14 @@
                 
             </div>
 
-            <a href="/login">Вход</a>
-
+            
             <button id="submit-btn" class="accent" type="submit">Зарегистрироваться</button>
+            
+            <p class="auth__question">
+                Уже есть аккаунт?<br>
+                <a href="/login" class="auth__link">Вход</a>
+            </p>
+
         </form>
     </main>
 
