--- a/static/styles/auth/auth.css
+++ b/static/styles/auth/auth.css
@@ -26,3 +26,22 @@ main {
 #submit-btn {
     font-size: 1.25rem;
 }
+
+.auth__question {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    line-height: 1.4rem;
+    color: var(--text-muted);
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+
+.auth__link {
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
