--- a/static/styles/includes/header.css
+++ b/static/styles/includes/header.css
@@ -23,6 +23,7 @@ header button, header a {
     border: 0;
     border-radius: var(--border-radius-small);
     box-shadow: none;
+    transition: background 0.1s ease-in-out;
 }
 
 header button:hover, header a:hover {
