--- a/static/styles/layouts/base.css
+++ b/static/styles/layouts/base.css
@@ -56,7 +56,12 @@ input, textarea {
     color: inherit;
     box-shadow: var(--shadow-small);
     outline: none;
+    transition: border 0.1s ease-in-out;
 
+
+    &:hover {
+        border-color: var(--border-color);
+    }
 
     &:focus {
         border: 2px solid var(--primary);
@@ -83,6 +88,7 @@ button {
     border-radius: var(--border-radius-small);
     background: var(--bg-light);
     box-shadow: var(--shadow-small);
+    transition: background 0.1s ease-in-out;
     
     
     &.accent {
