--- a/templates/menus/menu.html
+++ b/templates/menus/menu.html
@@ -16,18 +16,23 @@
     <form id="filtersForm" style="display: none;"></form>
 
     <div class="top-bar__left">
-        <h1 class="title left">Меню</h1>
-        <p class="price">{{ menu.price }}₽</p>
+        <h1 class="title left">
+            Меню | 
 
+            {% if menu %}
+                <span class="price">{{ menu.price }}₽</span>
+            {% endif %}
+        </h1>
     </div>
 
     <div class="top-bar__right">
         <div class="filters">
             <select name="type" id="menuTypeSelect" class="menu-type" form="filtersForm">
-                {% if menu.type == "breakfast" %}
+                {% set menu_type = request.args.get('type', '') %}
+                {% if menu_type == "breakfast" %}
                     <option value="breakfast" selected>Завтрак</option>
                     <option value="lunch">Обед</option>
-                {% elif menu.type == "lunch" %}
+                {% elif menu_type == "lunch" %}
                     <option value="breakfast">Завтрак</option>
                     <option value="lunch" selected>Обед</option>
                 {% else %}
@@ -38,15 +43,15 @@
         </div>
 
         {% if current_user.roles[0].name == 'user' %}
-        <form class="buy-form" method="POST" action="/menu/{{ selected_date }}?type={{ menu.type }}">
-            <input type="hidden" name="menu_id" value="{{ menu.id }}">
-            <button class="buy-menu-btn accent" type="submit">Купить</button>
-        </form>
+            <form class="buy-form" method="POST" action="/menu/{{ selected_date }}?type={{ menu.type }}">
+                <input type="hidden" name="menu_id" value="{{ menu.id }}">
+                <button class="buy-menu-btn accent" type="submit">Купить</button>
+            </form>
         {% elif current_user.roles[0].name == 'cook' %}
-        <form class="buy-form" method="POST" action="/menu/{{ selected_date }}?type={{ menu.type }}">
-            <input type="hidden" name="menu_id" value="{{ menu.id }}">
-        </form>
-        <button class="buy-menu-btn accent" onclick="document.location='/cook/menu/add'">Добавить</button>
+            <form class="buy-form" method="POST" action="/menu/{{ selected_date }}?type={{ menu.type }}">
+                <input type="hidden" name="menu_id" value="{{ menu.id }}">
+            </form>
+            <button class="buy-menu-btn accent" onclick="document.location='/cook/menu/add'">Добавить</button>
         {% endif %}
 
     </div>
