--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -1,99 +1,104 @@
 {% extends 'layouts/management/users.html' %}
 
-{% block title %}Редактировать пользователя {{ user.surname }} {{ user.name[0] }}. {{ user.patronymic[0] }}.{% endblock %}
+{% block title %}Редактировать: {{ user.surname }} {{ user.name }} {{ user.patronymic }}{% endblock %}
+
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="/static/styles/users/user.css">
+{% endblock %}
 
 {% block top_bar %}
 {{ super() }}
-<div>
+<div class="top-bar-actions">
     <button onclick="location.href='/admin/users/{{ user.id }}'" type="button">Отмена</button>
-    <button type="submit" form="edit-user-form" class="accent">Сохранить</button>
+    <button type="submit" form="edit-user-form" class="accent">Сохранить изменения</button>
+    <button type="button" class="danger">Удалить</button>
 </div>
 {% endblock %}
 
 {% block main %}
-    <div class="user-profile edit-form">
+    <div class="user-profile">
         <div class="profile-header">
             <div>
-                <h1 class="profile-title">
-                    {{ user.surname }} {{ user.name[0] }}. {{ user.patronymic[0] }}.
-                </h1>
-                <div class="user-id">ID пользователя: {{ user.id }}</div>
+                <h1 class="profile-title">Редактирование пользователя</h1>
+                <div class="user-id">ID: {{ user.id }}</div>
             </div>
         </div>
 
-        <form id="edit-user-form" method="post">
+        <form id="edit-user-form" method="post" class="edit-form">
             <div class="info-section">
                 <h3>Основная информация</h3>
-                <div class="info-grid">
+                <div class="form-grid">
                     <div class="form-field">
-                        <label>Логин</label>
+                        <label>Фамилия *</label>
+                        <input type="text" name="surname" value="{{ user.surname }}" required>
+                    </div>
+
+                    <div class="form-field">
+                        <label>Имя *</label>
+                        <input type="text" name="name" value="{{ user.name }}" required>
+                    </div>
+
+                    <div class="form-field">
+                        <label>Отчество *</label>
+                        <input type="text" name="patronymic" value="{{ user.patronymic }}" required>
+                    </div>
+
+                    <div class="form-field">
+                        <label>Логин *</label>
                         <input type="text" name="login" value="{{ user.login }}" required>
                     </div>
 
                     <div class="form-field">
                         <label>Роль</label>
-                        <select name="role" required>
-                            <option value="">Выберите роль</option>
-                            <option value="cook" {% if roles[0].name == 'cook' %}selected{% endif %}>Повар</option>
-                            <option value="admin" {% if roles[0].name == 'admin' %}selected{% endif %}>Админ</option>
-                        </select>
-                    </div>
-
-                    <div class="form-field">
-                        <label>Фамилия</label>
-                        <input type="text" name="surname" value="{{ user.surname }}" required>
-                    </div>
-
-                    <div class="form-field">
-                        <label>Имя</label>
-                        <input type="text" name="name" value="{{ user.name }}" required>
-                    </div>
-
-                    <div class="form-field">
-                        <label>Отчество</label>
-                        <input type="text" name="patronymic" value="{{ user.patronymic }}" required>
+                        <input type="text"
+                               value="{% if user.roles[0].name == 'user' %}Пользователь
+                                      {% elif user.roles[0].name == 'cook' %}Повар
+                                      {% elif user.roles[0].name == 'admin' %}Администратор
+                                      {% endif %}"
+                               readonly>
+                        <input type="hidden" name="role" value="{{ user.roles[0].name }}">
                     </div>
                 </div>
             </div>
 
+            {% if user.roles[0].name == 'user' and user.student_info %}
+            <div class="info-section">
+                <h3>Информация о пользователе</h3>
+                <div class="form-grid">
+                    <div class="form-field">
+                        <label>Класс</label>
+                        <input type="text" name="stud_class" value="{{ user.student_info.stud_class or '' }}">
+                    </div>
+
+                    <div class="form-field">
+                        <label>Баланс (руб.)</label>
+                        <input type="number" name="balance" value="{{ user.student_info.balance }}" min="0">
+                    </div>
+
+                    <div class="form-field">
+                        <label>Абонемент до</label>
+                        <input type="date" name="abonement"
+                               value="{% if user.student_info.abonement %}{{ user.student_info.abonement.strftime('%Y-%m-%d') }}{% endif %}">
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+
             <div class="info-section">
                 <h3>Смена пароля</h3>
-                <div class="info-grid">
+                <div class="form-grid">
                     <div class="form-field">
                         <label>Новый пароль</label>
-                        <input type="password" name="password">
+                        <input type="password" name="new_password" placeholder="Оставьте пустым, если не нужно менять">
                     </div>
 
                     <div class="form-field">
                         <label>Повторите пароль</label>
-                        <input type="password" name="second_password">
+                        <input type="password" name="confirm_password" placeholder="Повторите новый пароль">
                     </div>
                 </div>
             </div>
-
-            {% if user_info %}
-            <div class="info-section">
-                <h3>Дополнительная информация</h3>
-                <div class="info-grid">
-                    <div class="form-field">
-                        <label>Баланс</label>
-                        <input type="number" name="balance" value="{{ user_info.balance }}">
-                    </div>
-
-                    <div class="form-field">
-                        <label>Класс</label>
-                        <input type="text" name="stud_class" value="{{ user_info.stud_class }}">
-                    </div>
-
-                    {% if user_info.abonement %}
-                    <div class="form-field">
-                        <label>Абонемент до</label>
-                        <input type="date" name="abonement" value="{{ user_info.abonement.strftime('%Y-%m-%d') }}">
-                    </div>
-                    {% endif %}
-                </div>
-            </div>
-            {% endif %}
         </form>
     </div>
 {% endblock %}
