--- a/templates/users/user.html
+++ b/templates/users/user.html
@@ -1,16 +1,18 @@
 {% extends 'layouts/management/users.html' %}
 
-{% block title %}Пользователь {{ user.surname }} {{ user.name[0] }}. {{ user.patronymic[0] }}.{% endblock %}
+{% block title %}Пользователь: {{ user.surname }} {{ user.name }} {{ user.patronymic }}{% endblock %}
+
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="/static/styles/users/user.css">
+{% endblock %}
 
 {% block top_bar %}
 {{ super() }}
-<div>
-    <button onclick="location.href='/admin/user/{{ user.id }}/edit'" class="accent">
-        Изменить
-    </button>
-    <button onclick="if(confirm('Вы уверены, что хотите удалить пользователя?')) location.href='/admin/user/{{ user.id }}/del'" class="danger">
-        Удалить
-    </button>
+<div class="top-bar-actions">
+    <button onclick="location.href='/admin/users'" type="button">Отмена</button>
+    <button onclick="location.href='/admin/user/{{ user.id }}/edit'" type="button" class="accent">Изменить</button>
+    <button type="button" class="danger">Удалить</button>
 </div>
 {% endblock %}
 
@@ -18,26 +20,14 @@
     <div class="user-profile">
         <div class="profile-header">
             <div>
-                <h1 class="profile-title">
-                    {{ user.surname }} {{ user.name[0] }}. {{ user.patronymic[0] }}.
-                </h1>
-                <div class="user-id">ID пользователя: {{ user.id }}</div>
+                <h1 class="profile-title">{{ user.surname }} {{ user.name }} {{ user.patronymic }}</h1>
+                <div class="user-id">ID: {{ user.id }}</div>
             </div>
         </div>
 
         <div class="info-section">
             <h3>Основная информация</h3>
             <div class="info-grid">
-                <div class="info-field">
-                    <label>Логин</label>
-                    <div class="info-value">{{ user.login }}</div>
-                </div>
-
-                <div class="info-field">
-                    <label>Роль</label>
-                    <div class="info-value">{{ roles[0].name }}</div>
-                </div>
-
                 <div class="info-field">
                     <label>Фамилия</label>
                     <div class="info-value">{{ user.surname }}</div>
@@ -52,27 +42,42 @@
                     <label>Отчество</label>
                     <div class="info-value">{{ user.patronymic }}</div>
                 </div>
+
+                <div class="info-field">
+                    <label>Логин</label>
+                    <div class="info-value">{{ user.login }}</div>
+                </div>
+
+                <div class="info-field">
+                    <label>Роль</label>
+                    <div class="info-value">
+                        {% if user.roles[0].name == 'user' %}Пользователь
+                        {% elif user.roles[0].name == 'cook' %}Повар
+                        {% elif user.roles[0].name == 'admin' %}Администратор
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
 
-        {% if user_info %}
+        {% if user.roles[0].name == 'user' and user.student_info %}
         <div class="info-section">
-            <h3>Дополнительная информация</h3>
+            <h3>Информация о пользователе</h3>
             <div class="info-grid">
                 <div class="info-field">
-                    <label>Баланс</label>
-                    <div class="info-value">{{ user_info.balance }} ₽</div>
+                    <label>Класс</label>
+                    <div class="info-value">{{ user.student_info.stud_class or '-' }}</div>
                 </div>
 
                 <div class="info-field">
-                    <label>Класс</label>
-                    <div class="info-value">{{ user_info.stud_class }}</div>
+                    <label>Баланс</label>
+                    <div class="info-value">{{ user.student_info.balance }} ₽</div>
                 </div>
 
-                {% if user_info.abonement %}
+                {% if user.student_info.abonement %}
                 <div class="info-field">
                     <label>Абонемент до</label>
-                    <div class="info-value">{{ user_info.abonement.strftime('%d.%m.%Y') }}</div>
+                    <div class="info-value">{{ user.student_info.abonement.strftime('%d.%m.%Y') }}</div>
                 </div>
                 {% endif %}
             </div>
