--- a/templates/includes/dishes/dish_tile.html
+++ b/templates/includes/dishes/dish_tile.html
@@ -1,6 +1,6 @@
 <div class="dish">
     <a class="dish__link" href="/dishes/{{ dish.id }}">
-        <div class="dish__name">{{ dish.name }}</div>
+        <div class="dish__name">{{ dish.name }} | <span class="dish__category">{{ dish.category }}</span></div>
         <ul class="dish__composition">
             {% for product in dish.products %}
                 <li>{{ product.name }}</li>
