--- a/templates/dishes/dish.html
+++ b/templates/dishes/dish.html
@@ -25,7 +25,7 @@
             </div>
 
             <ul class="dish__composition">
-                {% for product in dish.products %}
+                {% for product in products %}
                     <li>{{ product.name }}</li>
                 {% endfor %}
             </ul>
