--- a/templates/layouts/management/requisition.html
+++ b/templates/layouts/management/requisition.html
@@ -7,10 +7,13 @@
 
 
 {% block sidebar_tabs %}
-    <li><a href="/notifications">К уведомлениям</a></li>
 {% if role == 'cook' %}
     <li><a href="/cook/requisitions">Список</a></li>
     <li><a href="/cook/requisition/add">Добавить</a></li>
+{% else %}
+    <li><a href="/admin/requisitions">Ожидающие</a></li>
+    <li><a href="/admin/requisitions/history">История</a></li>
 {% endif %}
 {% endblock %}
+
 
