--- a/templates/requisition/admin.html
+++ b/templates/requisition/admin.html
@@ -23,6 +23,6 @@
         </div>
 
     {% else %}
-        <p class="no-requisition-message"><strong>Нет запросов.</strong></p>
+        <p class="no-requisition-message"><strong>Нет заявок.</strong></p>
     {% endif %}    
 {% endblock %}
