--- a/templates/requisition/list.html
+++ b/templates/requisition/list.html
@@ -21,6 +21,6 @@
             {% endfor %}
         </div>
     {% else %}
-        <p class="no-requisition-message"><strong>Нет запросов.</strong></p>
+        <p class="no-requisition-message"><strong>Нет заявок.</strong></p>
     {% endif %}    
 {% endblock %}
