--- a/templates/includes/notifications/notification_tile.html
+++ b/templates/includes/notifications/notification_tile.html
@@ -10,7 +10,7 @@
             {% endif %}
         </li>
         <li>{{ notification.text }}</li>
-        {% if role == 'admin' and notification.requisition_id and notification.status != 2 %}
+        {% if role == 'admin' and notification.requisition_id and notification.status != 2 and notification.type == 'requisition' %}
             <form method="POST" action="/notifications" class="action-form">
                 <input type="hidden" name="notification_id" value="{{ notification.id }}">
                 <div style="display: flex; gap: 1px; margin-top: 10px;">
@@ -19,7 +19,16 @@
                     </button>
                 </div>
             </form>
-        {% elif role == 'cook' and notification.requisition_id and notification.status != 2 %}
+        {% elif role == 'cook' and notification.requisition_id and notification.status != 2 and notification.type == 'requisition' %}
+            <form method="POST" action="/notifications" class="action-form">
+                <input type="hidden" name="notification_id" value="{{ notification.id }}">
+                <div style="display: flex; gap: 1px; margin-top: 10px;">
+                    <button type="submit" name="action" value="view" class="btn accent">
+                        Просмотреть
+                    </button>
+                </div>
+            </form>
+        {% elif role == 'user' and notification.type == 'profile' and notification.status != 2 %}
             <form method="POST" action="/notifications" class="action-form">
                 <input type="hidden" name="notification_id" value="{{ notification.id }}">
                 <div style="display: flex; gap: 1px; margin-top: 10px;">
