--- a/templates/includes/dishes/dish_tile.html
+++ b/templates/includes/dishes/dish_tile.html
@@ -1,9 +1,9 @@
 <div class="dish">
-    <a class="dish__link" href="/dishes/{{ dish.id }}">
+    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
         <div class="dish__name">{{ dish.name }}</div>
         <ul class="dish__composition">
-            {% for product in dish.products %}
-                <li>{{ product.name }}</li>
+            {% for association in dish.products %}
+                <li>{{ association.product.name }}</li>
             {% endfor %}
         </ul>
     </a>
