--- a/templates/includes/dishes/dish_tile.html
+++ b/templates/includes/dishes/dish_tile.html
@@ -2,7 +2,7 @@
     <a class="dish__link" href="/dishes/{{ dish.id }}">
         <div class="dish__name">{{ dish.name }}</div>
         <ul class="dish__composition">
-            {% for product in dish.products %}
+            {% for product in dish.products_name %}
                 <li>{{ product.name }}</li>
             {% endfor %}
         </ul>
