--- a/templates/menus/list.html
+++ b/templates/menus/list.html
@@ -1,13 +1,33 @@
-{% extends 'layouts/management/menus.html' %}
+{% extends 'layouts/sidebar_w_header.html' %}
 
+{% from 'macros/sidebar.html' import sidebar %}
 
 {% block title %}Список меню{% endblock %}
 
+{% block top_bar %}
+<div class="top-bar__left">
+        <h1 class="title left">Список меню</h1>
+</div>
+{% endblock %}
+
+{% block sidebar %}
+    {% call sidebar(header='Категории') %}
+    <ul class="days-list">
+        <li class="day">
+            <a class="day__link" href="#breakfasts">Завтраки</a>
+        </li>
+        <li class="day">
+            <a class="day__link" href="#breakfasts">Обеды</a>
+        </li>
+    {% endcall %}
+{% endblock %}
 
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="/static/styles/menus/list.css">
     <link rel="stylesheet" href="/static/styles/includes/menus/menu_tile.css">
+    <link rel="stylesheet" href="/static/styles/menus/menu.css">
+    <link rel="stylesheet" href="/static/styles/macros/sidebar.css">
 {% endblock %}
 
 
