--- a/templates/dishes/adding.html
+++ b/templates/dishes/adding.html
@@ -8,6 +8,7 @@
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="/static/styles/dishes/adding.css">
+    <link rel="stylesheet" href="/static/styles/macros/labeled_fields.css">
 {% endblock %}
 
 {% block top_bar %}
