--- a/templates/includes/dishes/dish_tile.html
+++ b/templates/includes/dishes/dish_tile.html
@@ -1,10 +1,6 @@
 <div class="dish">
-    <a class="dish__link" href="/dishes/{{ dish.id }}">
-        {% if current_user.roles[0].name == 'admin' %}
-        <div class="dish__name">{{ dish.name }} | <span class="dish__category">{{ dish.category }}</span></div>
-        {% else %}
+    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
         <div class="dish__name">{{ dish.name }}</div>
-        {% endif %}
         <ul class="dish__composition">
             {% for association in dish.products %}
                 <li>{{ association.product.name }}</li>
