--- a/templates/products/admin.html
+++ b/templates/products/admin.html
@@ -44,7 +44,7 @@
                     <span class="product-value">{{ product.amount }}</span>
                 </div>
                 <div class="product-info">
-                    <span class="product-label">Единица:</span>
+                    <span class="product-label">Единица измерения:</span>
                     <span class="product-value">{{ product.measurement }}</span>
                 </div>
             </div>
