--- a/templates/requisition/list.html
+++ b/templates/requisition/list.html
@@ -21,6 +21,8 @@
             {% endfor %}
         </div>
     {% else %}
-        <p class="no-requisition-message"><strong>Нет заявок.</strong></p>
+        <div class="no-requisition-message">
+            <p><strong>Заявок нет</strong></p>
+        </div>
     {% endif %}    
 {% endblock %}
