--- a/static/styles/menus/menu.css
+++ b/static/styles/menus/menu.css
@@ -93,6 +93,16 @@ main {
     box-shadow: var(--shadow);
 }
 
+.no-dishes-message {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: var(--text-muted);
+}
+
 .category-title {
     margin: 0;
     margin-bottom: 16px;
