--- a/static/styles/users/list.css
+++ b/static/styles/users/list.css
@@ -63,3 +63,13 @@
     border-radius: var(--border-radius);
     box-shadow: var(--shadow-small);
 }
+
+.no-users-message {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: var(--text-muted);
+}
