--- a/templates/dishes/admin.html
+++ b/templates/dishes/admin.html
@@ -43,125 +43,77 @@
 {% endblock %}
 
 {% block main %}
-<div class="dishes-container">
-    {% if breakfasts %}
-    <section id="breakfasts" class="dish-category">
-        <h2 class="category-title">Завтраки</h2>
-        <div class="menu-grid">
-            {% for dish in breakfasts %}
-                <div class="dish">
-                    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
-                        <div class="dish__name">{{ dish.name }}</div>
-                        <ul class="dish__composition">
-                            {% for association in dish.products %}
-                                <li>{{ association.product.name }}</li>
-                            {% endfor %}
-                        </ul>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </section>
-    {% endif %}
+{% if breakfasts or salads or soups or main_dishes or drinks or bread %}
+    <div class="dishes-container">
+        {% if breakfasts %}
+        <section id="breakfasts" class="dish-category">
+            <h2 class="category-title">Завтраки</h2>
+            <div class="menu-grid">
+                {% for dish in breakfasts %}
+                    {% include 'includes/dishes/dish_tile.html' %}
+                {% endfor %}
+            </div>
+        </section>
+        {% endif %}
 
-    {% if salads %}
-    <section id="salads" class="dish-category">
-        <h2 class="category-title">Салаты</h2>
-        <div class="menu-grid">
-            {% for dish in salads %}
-                <div class="dish">
-                    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
-                        <div class="dish__name">{{ dish.name }}</div>
-                        <ul class="dish__composition">
-                            {% for association in dish.products %}
-                                <li>{{ association.product.name }}</li>
-                            {% endfor %}
-                        </ul>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </section>
-    {% endif %}
+        {% if salads %}
+        <section id="salads" class="dish-category">
+            <h2 class="category-title">Салаты</h2>
+            <div class="menu-grid">
+                {% for dish in salads %}
+                    {% include 'includes/dishes/dish_tile.html' %}
+                {% endfor %}
+            </div>
+        </section>
+        {% endif %}
 
-    {% if soups %}
-    <section id="soups" class="dish-category">
-        <h2 class="category-title">Супы</h2>
-        <div class="menu-grid">
-            {% for dish in soups %}
-                <div class="dish">
-                    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
-                        <div class="dish__name">{{ dish.name }}</div>
-                        <ul class="dish__composition">
-                            {% for association in dish.products %}
-                                <li>{{ association.product.name }}</li>
-                            {% endfor %}
-                        </ul>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </section>
-    {% endif %}
+        {% if soups %}
+        <section id="soups" class="dish-category">
+            <h2 class="category-title">Супы</h2>
+            <div class="menu-grid">
+                {% for dish in soups %}
+                    {% include 'includes/dishes/dish_tile.html' %}
+                {% endfor %}
+            </div>
+        </section>
+        {% endif %}
 
-    {% if main_dishes %}
-    <section id="main_dishes" class="dish-category">
-        <h2 class="category-title">Основные блюда</h2>
-        <div class="menu-grid">
-            {% for dish in main_dishes %}
-                <div class="dish">
-                    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
-                        <div class="dish__name">{{ dish.name }}</div>
-                        <ul class="dish__composition">
-                            {% for association in dish.products %}
-                                <li>{{ association.product.name }}</li>
-                            {% endfor %}
-                        </ul>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </section>
-    {% endif %}
+        {% if main_dishes %}
+        <section id="main_dishes" class="dish-category">
+            <h2 class="category-title">Основные блюда</h2>
+            <div class="menu-grid">
+                {% for dish in main_dishes %}
+                    {% include 'includes/dishes/dish_tile.html' %}
+                {% endfor %}
+            </div>
+        </section>
+        {% endif %}
 
-    {% if drinks %}
-    <section id="drinks" class="dish-category">
-        <h2 class="category-title">Напитки</h2>
-        <div class="menu-grid">
-            {% for dish in drinks %}
-                <div class="dish">
-                    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
-                        <div class="dish__name">{{ dish.name }}</div>
-                        <ul class="dish__composition">
-                            {% for association in dish.products %}
-                                <li>{{ association.product.name }}</li>
-                            {% endfor %}
-                        </ul>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </section>
-    {% endif %}
+        {% if drinks %}
+        <section id="drinks" class="dish-category">
+            <h2 class="category-title">Напитки</h2>
+            <div class="menu-grid">
+                {% for dish in drinks %}
+                    {% include 'includes/dishes/dish_tile.html' %}
+                {% endfor %}
+            </div>
+        </section>
+        {% endif %}
 
-    {% if bread %}
-    <section id="bread" class="dish-category">
-        <h2 class="category-title">Хлеб</h2>
-        <div class="menu-grid">
-            {% for dish in bread %}
-                <div class="dish">
-                    <a class="dish__link" href="/admin/dishes/{{ dish.id }}">
-                        <div class="dish__name">{{ dish.name }}</div>
-                        <ul class="dish__composition">
-                            {% for association in dish.products %}
-                                <li>{{ association.product.name }}</li>
-                            {% endfor %}
-                        </ul>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </section>
-    {% endif %}
-</div>
+        {% if bread %}
+        <section id="bread" class="dish-category">
+            <h2 class="category-title">Хлеб</h2>
+            <div class="menu-grid">
+                {% for dish in bread %}
+                    {% include 'includes/dishes/dish_tile.html' %}
+                {% endfor %}
+            </div>
+        </section>
+        {% endif %}
+    </div>
+{% else %}
+    <div class="no-dishes-message">
+        <p><strong>Блюд нет</strong></p>
+    </div>
+{% endif %}
 {% endblock %}
