--- a/templates/dishes/dish.html
+++ b/templates/dishes/dish.html
@@ -12,7 +12,7 @@
 
 {% block top_bar %}
     <h1 class="title left">{{ dish.name }} |
-        <span class="dish__category">{{ dish.category }}</span>
+        <span class="dish__category">{{ dish.category_name }}</span>
     </h1>
 {% endblock %}
 
