--- a/templates/requisition/admin.html
+++ b/templates/requisition/admin.html
@@ -23,6 +23,8 @@
         </div>
 
     {% else %}
-        <p class="no-requisition-message"><strong>Нет заявок.</strong></p>
+        <div class="no-requisition-message">
+            <p><strong>Заявок нет</strong></p>
+        </div>
     {% endif %}    
 {% endblock %}
