admin's statistics + reports

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -30,6 +30,8 @@
                     <a href="/admin/dishes">Блюда</a>
                     <a href="/admin/users">Пользователи</a>
                     <a href="/admin/requisitions">Закупки</a>
+                    <a href="/admin/statistics">Статистика</a>
+                    <a href="/admin/reports">Отчёты</a>
                     <button id="profile-btn">{{ surname }} {{ name[0] }}.</button>
                 </nav>
             {% endif %}
